# Misaka-BMS

./: .gitignore  .gitmodules  Battery-Management-System-Minimum.ioc  CMakeLists.txt  README.md
Board/: analog.c  analog.h  board.c  communicate.c  communicate.h  eeprom.c  eeprom.h  system.c  system.h  temperature.c  temperature.h  timx.c  timx.h
Board/inc/board/: system.h
Core/Inc/: main.h  tim.h  usart.h
Core/Src/: adc.c  gpio.c  iwdg.c  main.c  stm32f1xx_it.c  usart.c
MDK-ARM/: .gitignore  Battery-Management-System-Minimum.uvprojx
Middleware/ButtonDrive/: README.md  button.c  button.h
Middleware/EasyFlash/easyflash/inc/: easyflash.h  ef_cfg.h  ef_def.h
Middleware/EasyFlash/easyflash/src/: easyflash.c  ef_env.c  ef_fal_port.c  ef_sfud_port.c
Middleware/Fal/inc/: fal.h  fal_cfg.h  fal_def.h
Middleware/Fal/src/: fal_flash.c  fal_flash_sfud_port.c
Middleware/Misaka-AT24CXX/: Misaka_AT24CXX.c  Misaka_AT24CXX.h  Misaka_AT24CXX_Port.c
Middleware/Misaka-Beep/: Misaka_Beep.c  Misaka_Beep.h  Misaka_Beep_Port.c
Middleware/Misaka-Device/Misaka-Device-Soft_I2C/: Misaka_Device_Soft_I2C.c  Misaka_Device_Soft_I2C.h  Misaka_Device_Soft_I2C_Port.c
Middleware/Misaka-FSC-Station/: Misaka_FSC_Station.c  Misaka_FSC_Station.h  Misaka_FSC_Station_Port.c
Middleware/Misaka-Filter/: Misaka_Filter.h  Misaka_Filter_LPF.c
Middleware/Misaka-LTC6811/: Misaka_LTC6811.c  Misaka_LTC6811.h  Misaka_LTC6811_Base.c  Misaka_LTC6811_Base.h  Misaka_LTC6811_NTC_Table.c  Misaka_LTC6811_NTC_Table.h  Misaka_LTC6811_Port.c
Middleware/Misaka-RGB-Bling/: Misaka_RGB_Bling_Port.c
Middleware/RT-Thread/: rtconfig.h
Middleware/SFUD/: README.md
Middleware/SFUD/sfud/inc/: sfud_cfg.h  sfud_def.h
Middleware/SFUD/sfud/src/: sfud.c  sfud_port.c  sfud_sfdp.c
Middleware/littlefs/: dfs_lfs.c  lfs.c  lfs.h  lfs_config.h  lfs_crc.c  lfs_util.c  lfs_util.h  littlefs.h  littlefs_port.c
Middleware/littlefs/bd/: lfs_filebd.h  lfs_rambd.h  lfs_testbd.h
Thread/: Beep.c  Beep.h  Bling.c  Bling.h  Key.c  Key.h  adc_mux.c  adc_mux.h  bat_current.c  bat_current.h  bat_temperature.c  bat_temperature.h  bat_voltage.c  bat_voltage.h  ltc6811_check.c  ltc6811_check.h  ltc6811_thread.c  ltc6811_thread.h  self_status.c  self_status.h
board/: board.c  misaka_at24cxx_port.c  misaka_beep_port.c  misaka_ltc6811_port.c  misaka_rgb_port.c  misaka_soft_i2c_port.c  misaka_spi_port.c  system.c
cubemx/: .mxproject  Makefile  misaka-bms.ioc  misaka_bms.ioc
cubemx/Core/Inc/: stm32f1xx_it.h
cubemx/Core/Src/: adc.c  can.c  dma.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
gcc/: STM32F103C8Tx_FLASH.ld
mdk/: misaka-bms.uvprojx  misaka_bms.uvprojx
middleware/rt-thread/: rtconfig.h
middleware/rt-thread/src/: kservice.c
